# scaffoldor

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml  scaffold.py  setup.cfg  setup.py
.github/workflows/: ci.yml
scaffoldor/: __init__.py  cli.py  scaffold.py
scaffoldor/templates/: default.json
scaffoldor/templates/content/another-new-template_example/another-new-template_example/: .env.example.jinja
scaffoldor/templates/content/another-new-template_example/my-new-template1_example/: docker-compose.yml.jinja
scaffoldor/templates/content/another-new-template_example/my-new-template1_example/my-new-template1_example/: README.md.jinja
tests/: conftest.py  test_cli.py  test_scaffold.py
