[metadata]
name = scaffoldor
version = 0.1.2 
description = CLI tool to scaffold secure fullstack app structures
author = Gashaw Kidanu
author_email = kidanugashaw@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gashaw512/scaffoldor
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.7
include_package_data = true

[options.entry_points]
console_scripts =
    scaffoldor = scaffoldor.cli:main

[bdist_wheel]
universal = 1
